# rust-ray-tracing

./: .gitignore  Cargo.toml  json_to_toml.py  test_script.py
.cargo/: config.toml
src/: color.rs  geometry.rs  main.rs  materials.rs  objects.rs  packed.rs  ray.rs  ray_tracing.rs  real.rs  renderer.rs  simd_util.rs  toml_utils.rs
