[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
console = "0.15.7"
crossbeam-channel = "0.5.10"
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8.8", features = ["parse"]}

[profile.release]
debug=true